plugin/src/test/resources/annotator/perl/unreachableCode/givenWhenDefault.code
sub test(){
  my $var = 'test';
  given($var){
      say 'before';
      when('test'){
          say 'first';
      }
      say 'mid';
      default{
          say 'default';
      }
      say '<error descr="Unreachable code">after</error>';
  }
  say 'end';
}